# ohsol

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: errors.json
src/: cli.rs  log_parser.rs  main.rs  output.rs  rpc.rs
src/decoder/: anchor.rs  mod.rs  registry.rs
src/idl/: fetch.rs  mod.rs  parse.rs
